--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -19,7 +19,7 @@
 }
 
 .sign-in__wrapper form {
-    width: 24rem;
+    width: 25rem;
     max-width: 90%;
     z-index: 1;
     animation: showSignInForm 1s;
@@ -29,7 +29,7 @@
     width: 4rem;
 }
 
-@keyframes showSignInForm {
+/* @keyframes showSignInForm {
     0%,
     30% {
         transform: translate(0, -150%);
@@ -42,4 +42,4 @@
     100% {
         transform: translate(0, 0);
     }
-}
+} */
